fix to code smells xd